[package]
name = "scrappy"
version = "0.1.0"
authors = ["proegssilb <minifig404@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^0.7", features = ["fltk-bundled"] }
scrappy_core = { path = "scrappy_core" }

[dev-dependencies]
fake = { version = "2.2", features=['derive', 'chrono']}